[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/NpcFish.gd" id="1"]
[ext_resource type="Texture2D" path="res://art/fish_prey_yellow.png" id="2"]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(22, 16)

[node name="NpcFish" type="Area2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource(1)

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource(2)
position = Vector2(0, 0)

[node name="ThreatGlow" type="Sprite2D" parent="."]
texture = ExtResource(2)
position = Vector2(0, 0)
z_index = 1
visible = false

[node name="HitShape" type="CollisionShape2D" parent="."]
shape = SubResource(3)
